--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Where I parked my Car</title>
+    <link rel="stylesheet" href="css/jquery.mobile-1.2.0.min.css" media="all" />
+    <link rel="stylesheet" href="css/style.css" media="all" />
+    
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery.mobile.config.js"></script>
+    <script src="js/jquery.mobile-1.2.0.min.js"></script>
+    <script src="js/cordova-2.2.0.js"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/maps.js"></script>
+    <script src="js/positions.js"></script>
+    <script>
+        $(document).one('deviceready', initApplication);
+    </script>
 </head>
 <body>
-
+    <div id="welcome-page" data-role="page">
+        <header data-role="header">
+            <h1>Where I parked my Car</h1>
+        </header>
+        <div id="content" data-role="content">
+            <p>Where I parked my car lets you bookmark where you parked your car on a map 29 and then find a route when you want to return to it. The app will also 30 save a log of your saved positions (up to 50).</p>
+            <a href="map.html?requestType=set" id="set-car-position" data-role="button">Set Position</a>
+            <a href="map.html?requestType=get" id="find-car" data-role="button">Find Car</a>
+            <a href="positions.html" id="position-history" data-role="button">Positions history</a>
+        </div>
+        <footer data-role="footer">
+            <h3>Created by David K. Meredith - Based on Aurelio De Rosa</h3>
+            <a href="david.html" data-icon="info" data-iconpos="notext" class="ui-btn-right">Credits</a>
+        </footer>
+    </div>
 </body>
 </html>
